v0.12.2
- Fix issue with differences in gemspec and what is required. Resolves Issue #125.
- Update to Cassandra 0.8.7 and 1.0.2.

v0.12.1
- Fix issue with simple_uuid dependency.
- Fix issue with get_range & get_range_batch keeping all results when a block is given. Resolves Issue# 112.

v0.12.0 Changed thrift_client dependency to 0.7.0

v0.11.4
- Fix get_range to invoke blocks
- Fix current distribution urls in Rakfile. Resolves Issue# 97.

v0.11.3
- Fix login after reconnect

v0.11.2
- Update thrift_client gem to deal with failover bug.

v0.11.1
- Add counter support for Cassandra 0.8. (Thanks Swrve team!)
- Add additional rake tasks to start and stop cassandra in the background.
- Fix issue with non-utf8 column names not being encoded/decoded properly.
- Add way to specify a default read/write consistency.
- Consolidate 0.7 and 0.8 functions, and move 0.6 specific functions into lib/cassandra/0.6/
- Use 0.8-rc1 as 0.8 install target.
- Updated get_index_slices API to allow passing an array of hashes instead of IndexClause instance. (Maintains backward compatibility.)
- Fix permissions issue.

v0.11.0
- Remove direct thrift dependency. Allow thrift_client to require it.
- Add functions for each and each_key to iterate through key ranges.
- Add function for get_range_keys which returns an array of keys in a given range.
- Changed the return value of get_range to an OrderedHash.
- Change get_range to accept both a range of keys and a range of columns.
- Add batched range support to get_range and add get_range_batch.

v0.10.0 Major Update (rjackson)
- Update Rakefile to install 0.6.13, 0.7.4, 0.8.0-beta1 to ~/cassandra/cassandra-VERSION
- Add data:load task to Rakefile for creating the schema required for the tests
- Default the Rakefile to use 0.8-beta1
- Setup test suite to work on 0.6.13, 0.7.4, and 0.8.0-beta1
- All tests pass for all supported (0.6.13, 0.7.4, 0.8.0-beta1) versions.
- Added Support for 0.8-beta1